fixed backface visiblity

--- a/app/assets/stylesheets/flip.css
+++ b/app/assets/stylesheets/flip.css
@@ -20,8 +20,10 @@
 
 /* hide back of pane during swap */
 .front, .back {
-	backface-visibility: hidden;
-
+        backface-visibility:hidden;
+-webkit-backface-visibility:hidden; /* Chrome and Safari */
+-moz-backface-visibility:hidden; /* Firefox */
+-ms-backface-visibility:hidden; /* Internet Explorer */
 	position: absolute;
 	top: 0;
 	left: 0;
